# CGJ-Solo-Project

code/release/: install.txt
code/release/Save/: save.txt
code/release/shaders/: light-model-fs.glsl  light-model-wood-fs.glsl  light-model-wood-vs.glsl  screen-shader-fs.glsl  screen-shader-vs.glsl
code/source/: .gitignore  CMakeLists.txt  build.txt  readme.md
code/source/Save/: save.txt
code/source/libs/mgl/: mgl.hpp  mglApp.cpp  mglConventions.hpp  mglIDrawable.hpp  mglMesh.hpp  mglSceneNode.cpp  mglSceneNode.hpp  mglScenegraph.cpp  mglScenegraph.hpp
code/source/shaders/: blinn-phong-fs.glsl  blinn-phong-vs.glsl  clip-vs.glsl  cube-fs.glsl  cube-vs.glsl  light-model-fs.glsl  light-model-vs.glsl  light-model-wood-fs.glsl  light-model-wood-vs.glsl  particle-vs.glsl  screen-shader-fs.glsl  screen-shader-vs.glsl
code/source/src/: main.cpp
code/source/src/app/: app.cpp  app.hpp
